# EgoVLA

./: .gitignore  README.md  build_env.sh  hdf5_to_rrd.py  init_poses.pkl  init_poses_fixed_set.pkl  pyproject.toml  read_hdf5_types.py
VILA/: .gitignore
VILA/.github/workflows/: bot-autolint.yaml
VILA/data_prepare/: panda70m.sh  panda_split.py  parallel_shards.sh
VILA/inference_test/: inference_test.sh
VILA/llava/model/: llava_arch.py
VILA/llava/train/: llava_trainer.py  utils.py
VILA/tests/python/: test_rope_scaling.py
VILA/tests/seq_parallel/: run_e2e.sh
human_plan/dataset_preprocessing/hoi4d/: task_definitions.csv  task_definitions_verb.csv  utils.py  utils_zip.py  utils_zip_annotation.py
human_plan/dataset_preprocessing/holoassist/: utils.py
human_plan/dataset_preprocessing/hot3d/: HOT3D_Tutorial.ipynb  aria_seqs.txt  quest_seqs.txt  utils.py  utils_provider.py
human_plan/dataset_preprocessing/otv_isaaclab/: arguments.py  generate_images_mapping.py  generate_img_parquets.py  parquet_to_dataset_hand.py  parquet_to_dataset_images.py  utils.py
human_plan/dataset_preprocessing/taco/: prepare_data.py  utils.py
human_plan/dataset_preprocessing/utils/: mano_utils.py
human_plan/ego_bench_eval/: batch_script_30hz_h5_full.py  fullpretrain_p30_h5_transv2.sh  ik_agent_30hz.py  utils.py
human_plan/preprocessing/: preprocessing.py
human_plan/test/: test_ego_model.py  test_model.py
human_plan/utils/: action_tokenizer.py  visualization.py
human_plan/vila_train/: args.py  train.py
human_plan/visualize/: visualize_tokenizer.py
(+68 files in other folders)
